--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+target/
 /out/production/
 WoPeD-Text2Process/lib/stanford-corenlp-3.9.2-models.jar
 WoPeD-Text2Process/lib/stanford-corenlp-3.9.2-models.jar
