zusätzliches Release-Repository hinzugefügt

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 	</properties>
 
 	<distributionManagement>
+		<repository>
+			<id>nexus-releases</id>
+			<url>http://vesta.dh-karlsruhe.de/nexus/repository/maven-releases/</url>
+		</repository>
 		<snapshotRepository>
 			<id>nexus-snapshots</id>
 			<url>http://vesta.dh-karlsruhe.de/nexus/repository/maven-snapshots/</url>
