--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>de.dhbw.woped</groupId>
 	<artifactId>WoPeD-Process2Text</artifactId>
-	<version>3.7.1</version>
+	<version>3.7.1-SNAPSHOT</version>
 	<name>WoPeD-Process2Text</name>
 	<description>WoPed webservice p2t</description>
 
@@ -170,6 +170,11 @@
 				<configuration>
 					<includeSystemScope>true</includeSystemScope>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M1</version>
 			</plugin>
 			<!--
 			<plugin>
