--- a/src/main/resources/RealPro.properties
+++ b/src/main/resources/RealPro.properties
@@ -1,7 +1,6 @@
+#################################
+# RealPro Serial Number permanent
+#################################
 
-##############################################
-# RealPro Serial Number, valid til Jun 6, 2021
-##############################################
-
-RealPro_SN = 04j3-j320-007a-a000
+RealPro_SN = 0080-e780-50fa-f00e
 
