Added Camunda BPMN
Currently returns null pointer exception

--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,12 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/xml-apis.jar</systemPath>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
