--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.de.dhbw.woped.process2text = DEBUG
 server.port=8080
 server.servlet.context-path=/p2t
+management.endpoints.web.exposure.include=health,info,prometheus
