--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,15 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/xml-apis.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
