--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,3 +14,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Stage
         run: mvn clean install -Dmaven.test.skip=true
+        
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: nexus-releases # Value of the distributionManagement/repository/id field of the pom.xml
+
+
+      - name: Maven install
+        run: mvn clean install -Dmaven.test.skip=true
