--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,8 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build Stage
-        run: mvn clean install -Dmaven.test.skip=true
+      # - name: Build Stage
+      #  run: mvn clean install -Dmaven.test.skip=true
         
       - name: Set up JDK 11
         uses: actions/setup-java@v3
