--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,8 +12,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      # - name: Build Stage
-      #  run: mvn clean install -Dmaven.test.skip=true
         
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -22,6 +20,10 @@ jobs:
           distribution: 'temurin'
           server-id: nexus-releases # Value of the distributionManagement/repository/id field of the pom.xml
 
-
-      - name: Maven install
-        run: mvn clean install -Dmaven.test.skip=true
+      - name: Maven Package
+        run: mvn -B clean package -DskipTests
+      - name: Maven Verify
+        run: mvn -B clean verify
+        
+      # - name: Maven install
+        # run: mvn clean install -Dmaven.test.skip=true
