--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,4 @@ jobs:
         run: mvn clean install -Dmaven.test.skip=true
         
       - name: deploy jar
-        run: mvn -s $MAVEN_SETTINGS deploy -Dmaven.test.skip=true
-        env:
-          MAVEN_SETTINGS: ${{ github.workspace }}
+        run: mvn -s $GITHUB_WORKSPACE/settings.xml deploy -Dmaven.test.skip=true
