--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,4 +28,6 @@ jobs:
         with:
           artifacts: "release.tar.gz,foo/*.txt"
           token: ${{ secrets.GITHUB_TOKEN }}
+          commit: master
+          tag: v1.0.${{ github.run_number }}
 
