--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,11 +24,16 @@ jobs:
           
       - name: Build
         run: mvn clean install -Dmaven.test.skip=true
-
         
+      - name: Get version
+        run: |
+          VERSION=$( mvn help:evaluate -Dexpression=project.version -q -DforceStdout )
+          echo "::set-output name=version::$VERSION"
+        id: get_version
+
       - uses: ncipollo/release-action@v1
         with:
           artifacts: ${{ github.workspace }}
           token: ${{ secrets.GITHUB_TOKEN }}
           commit: master
-          tag: v1.0.${{ github.run_number }}
+          tag: ${{ github.get_version }}
