--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-          # server-id: nexus-releases # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }}
           
       - name: Build
@@ -35,3 +34,34 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit: master
           tag: ${{ env.RELEASE_VERSION }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Set current date as env variable
+        run: echo "NOW::$(date)" >> $GITHUB_ENV
+      
+      # TODO: IF ELSE, bei Snapshot Buildtime in Milliseconds anhängen
+      - if: contains(['SNAPSHOT'],env.RELEASE_VERSION)
+        name: IF
+        run: |
+          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-" >> $GITHUB_ENV
+      - if: false == contains(['SNAPSHOT'], env.RELEASE_VERSION)
+        name: Else
+        run: |
+          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+          
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: DOCKER_VERSION
