--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,17 +51,18 @@ jobs:
         run: echo "NOW::$(date)" >> $GITHUB_ENV
       
       # TODO: IF ELSE, bei Snapshot Buildtime in Milliseconds anhängen
-      - if: contains(['SNAPSHOT'],env.RELEASE_VERSION)
-        name: IF
-        run: |
-          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-" >> $GITHUB_ENV
-      - if: false == contains(['SNAPSHOT'], env.RELEASE_VERSION)
-        name: Else
-        run: |
-          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+      # - if: contains(['SNAPSHOT'],env.RELEASE_VERSION)
+      #  name: IF
+      #  run: |
+      #    echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-" >> $GITHUB_ENV
+      # - if: false == contains(['SNAPSHOT'], env.RELEASE_VERSION)
+      #  name: Else
+      #  run: |
+      #    echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
           
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: DOCKER_VERSION
+          # TODO: Docker Version statt RELEASE_VERSIO
+          tags: RELEASE_VERSION
