--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,6 +40,8 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with: 
+          version: v0.7.0
       
       - name: Login to DockerHub
         uses: docker/login-action@v2
