--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,9 +29,13 @@ jobs:
           echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
       
       - if: contains(['SNAPSHOT'],env.BUILD_VERSION)
+        name: Docker Version Snapshot
         run: |
           echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-      - if: |
+      
+      - if: false == contains(['SNAPSHOT'], env.BUILD_VERSION)
+        name: Docker Version no Snapshot
+        run: |
           echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       - uses: ncipollo/release-action@v1
