--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,11 +27,14 @@ jobs:
       - name: Set Release version env variable
         run: |
           echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+          
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       
       - name: Docker Version contains SNAPSHOT
         if: contains(env.RELEASE_VERSION, 'SNAPSPHOT')     
         run: |
-          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+          echo "DOCKER_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)#${{ env.DOCKER_VERSION }}" >> $GITHUB_ENV
       
       - name: Docker Version contains no SNAPSHOT
         if: false == contains(env.RELEASE_VERSION, 'SNAPSPHOT')
