--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions: write-all
-
+    
+    
     steps:
       - uses: actions/checkout@v3
         
@@ -21,6 +22,9 @@ jobs:
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
           
+      - name: Checkstyle for Java
+        uses: dbelyaev/action-checkstyle@v0.6.1
+
       - name: Build
         run: mvn clean install -Dmaven.test.skip=true
         
