--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
-				<version>${spotless.version}</version>
+				<version>2.26.2</version>
 				<configuration>
 					<!-- optional: limit format enforcement to just the files changed by this feature branch -->
 					<ratchetFrom>origin/main</ratchetFrom>
