--- a/pom.xml
+++ b/pom.xml
@@ -212,14 +212,19 @@
 		</dependency>
 		<dependency>
 			<groupId>com.diffplug.spotless</groupId>
+			<artifactId>spotless-maven-plugin</artifactId>
+			<version>2.22.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.diffplug.spotless</groupId>
 			<artifactId>spotless-lib</artifactId>
-			<version>2.26.2</version>
+			<version>2.22.8</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.diffplug.spotless</groupId>
 			<artifactId>spotless-lib-extra</artifactId>
-			<version>2.26.2</version>
+			<version>2.22.8</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
