--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
 			<artifactId>spotless-maven-plugin</artifactId>
 			<version>2.22.8</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.diffplug.spotless</groupId>
 			<artifactId>spotless-lib</artifactId>
 			<version>2.22.8</version>
@@ -226,7 +226,7 @@
 			<artifactId>spotless-lib-extra</artifactId>
 			<version>2.22.8</version>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.diffplug.durian</groupId>
 			<artifactId>durian-core</artifactId>
