--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,4 +67,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: svenjung/woped:${{ env.DOCKER_VERSION }}
+          tags: svenjung/p2t:${{ env.DOCKER_VERSION }}
