--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,18 @@
 			<artifactId>spotless-maven-plugin</artifactId>
 			<version>2.22.8</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.diffplug.spotless</groupId>
+			<artifactId>spotless-lib</artifactId>
+			<version>2.22.8</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.diffplug.spotless</groupId>
+			<artifactId>spotless-lib-extra</artifactId>
+			<version>2.22.8</version>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.diffplug.durian</groupId>
 			<artifactId>durian-core</artifactId>
@@ -281,7 +292,7 @@
 				<version>2.22.8</version>
 				<configuration>
 					<!-- optional: limit format enforcement to just the files changed by this feature branch -->
-					<ratchetFrom>origin/main</ratchetFrom>
+					<ratchetFrom>master</ratchetFrom>
 					<formats>
 						<!-- you can define as many formats as you want, each is independent -->
 						<format>
