--- a/pom.xml
+++ b/pom.xml
@@ -292,7 +292,7 @@
 				<version>2.22.8</version>
 				<configuration>
 					<!-- optional: limit format enforcement to just the files changed by this feature branch -->
-					<ratchetFrom>master</ratchetFrom>
+					<!-- <ratchetFrom>master</ratchetFrom> -->
 					<formats>
 						<!-- you can define as many formats as you want, each is independent -->
 						<format>
