--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,9 @@ jobs:
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
 
+      - name: Formatierungsprüfung via Spotless
+        run: mvn spotless:apply
+
       - name: Build
         run: mvn clean install -Dmaven.test.skip=true
         
