Einfügen von Spotless Check

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,10 @@ jobs:
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
 
-      - name: Formatierungsprüfung via Spotless
+      - name: Formatierungsprüfungs via Spotless
+        run: mvn spotless:check
+        
+      - name: Forcieren des Formatierungsstandards
         run: mvn spotless:apply
 
       - name: Build
