--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,11 +22,12 @@ jobs:
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
 
-      # - name: Formatierungsprüfungs via Spotless
-      #   run: mvn spotless:check
-        
-      - name: Forcieren des Formatierungsstandards
+      - name: Formatierungsprüfungs via Spotless
+        run: mvn spotless:check
         run: mvn spotless:apply
+        
+      # - name: Forcieren des Formatierungsstandards
+      #   run: mvn spotless:apply
 
       - name: Build
         run: mvn clean install -Dmaven.test.skip=true
