--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,14 +22,17 @@ jobs:
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
 
-      - name: Formatierungsprüfungs via Spotless
-        run: mvn spotless:check
+      # - name: Formatierungsprüfungs via Spotless
+      #   run: mvn spotless:check
         
-      - name: Forcieren des Formatierungsstandards
-        run: mvn spotless:apply
+      # - name: Forcieren des Formatierungsstandards
+      #   run: mvn spotless:apply
 
       - name: Build
         run: mvn clean install -Dmaven.test.skip=true
+
+         - name: Forcieren des Formatierungsstandards
+        run: mvn spotless:apply
         
       - name: Set Release version env variable
         run: |
