--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
       #   run: mvn spotless:apply
 
       - name: Build
-        run: mvn clean install -Dmaven.test.skip=true | mvn spotless:apply
+        run: mvn clean install -Dmaven.test.skip=true #| mvn spotless:apply
 
       - name: Forcieren des Formatierungsstandards #alternativ
         run: mvn spotless:apply
